cmake_minimum_required(VERSION 3.19)
project(DataStructure C)

set(CMAKE_C_STANDARD 99)

#add_executable(main main.c predefined.h)

add_subdirectory(1_Linear_List)
add_subdirectory(2_Linked_List)
add_subdirectory(3_Double_Linked_List)
add_subdirectory(4_Linear_Stack)
add_subdirectory(7_Linked_Queue)
add_subdirectory(6_Linear_Queue_Circular)
add_subdirectory(5_Linked_Stack)
add_subdirectory(8_Tree/8_Binary_Tree)
add_subdirectory(8_Tree/10_Threaded_Binary_Tree)
add_subdirectory(8_Tree/9_Huffman)
add_subdirectory(31_Hanoi)
add_subdirectory(9_Graph/11_AdjacencyMatrix)
add_subdirectory(9_Graph/12_AdjacencyList)
add_subdirectory(9_Graph/13_Depth-FirstSearch_List)
add_subdirectory(9_Graph/14_Breadth-FirstSearch_List)
add_subdirectory(9_Graph/15_Prim)
add_subdirectory(10_Searching/19_SequentialSearch)
add_subdirectory(10_Searching/20_BinarySearch)
add_subdirectory(10_Searching/21_BinarySortTree)
add_subdirectory(10_Searching/22_Hash)
add_subdirectory(11_Sorting/23_StraightInsertionSort)
add_subdirectory(11_Sorting/24_Binary_Inserting_Sort)
add_subdirectory(11_Sorting/25_ShellsSort)
add_subdirectory(11_Sorting/26_BubbleSort)
add_subdirectory(11_Sorting/27_QuickSort)
add_subdirectory(11_Sorting/28_SimpleSelectionSort)
add_subdirectory(11_Sorting/29_HeapSort)
add_subdirectory(11_Sorting/30_MergingSort)
add_subdirectory(9_Graph/16_Kruskal)
add_subdirectory(9_Graph/17_Dijkstra)
add_subdirectory(9_Graph/18_TopologicalSort)
add_subdirectory(32_File)

include_directories(./classdesign/include)

file(GLOB_RECURSE SOURCES "classdesign/*.*")

add_executable(main ${SOURCES})
